--- a/HearthDb.Tests/HearthDb.Tests.csproj
+++ b/HearthDb.Tests/HearthDb.Tests.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -75,7 +76,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ChuckEntity.cs" />
     <Compile Include="ChuckTest.cs" />
+    <Compile Include="ChuckTag.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DeckSerializerTest.cs" />
